# lumi

./: Cargo.toml  untitled.gltf
benches/: binding.rs  id_map.rs  key_map.rs  resources.rs
crates/lumi-assets/: Cargo.toml
crates/lumi-assets/src/: asset_loader.rs  asset_server.rs  handle.rs  io.rs  lib.rs
crates/lumi-bake/: Cargo.toml
crates/lumi-bake/src/: environment.rs  environment.wgsl  instance.rs
crates/lumi-bind/: Cargo.toml
crates/lumi-bind/src/: binding.rs  lib.rs
crates/lumi-bounds/: Cargo.toml
crates/lumi-bounds/src/: aabb.rs  frustum.rs  lib.rs  plane.rs
crates/lumi-core/: Cargo.toml
crates/lumi-core/src/: bind_group.rs  bind_key.rs  binding.rs  default_binding.rs  draw_command.rs  handle_bindings.rs  lib.rs  render_pipeline.rs  render_target.rs  resources.rs  sampler.rs  sampler_binding.rs  shared_device.rs  storage_binding.rs  storage_texture_binding.rs  texture.rs  texture_binding.rs  uniform_binding.rs
crates/lumi-core/src/buffer/: mod.rs  storage.rs  uniform.rs
crates/lumi-core/src/image/: data.rs  loader.rs  mod.rs  shared.rs
crates/lumi-gltf/: Cargo.toml
crates/lumi-gltf/src/: data.rs  lib.rs  loader.rs
crates/lumi-id/: Cargo.toml
crates/lumi-id/src/: lib.rs  map.rs
crates/lumi-macro/: Cargo.toml
crates/lumi-macro/src/: bind.rs  lib.rs  phase_label.rs
crates/lumi-material/: Cargo.toml
crates/lumi-material/src/: draw.rs  lib.rs  material.rs  mesh_node.rs  prepare.rs  primitive.rs  render.rs  standard.rs  unlit.rs
crates/lumi-mesh/: Cargo.toml
crates/lumi-mesh/src/: attribute.rs  generate_normals.rs  generate_tangents.rs  lib.rs  shape.rs
crates/lumi-renderer/: Cargo.toml
crates/lumi-renderer/src/: bloom.rs  camera.rs  draw.rs  environment.rs  extract.rs  frame_buffer.rs  integrated_brdf.rs  lib.rs  light.rs  mesh_transform.rs  mip_chain.rs  phase.rs  plugin.rs  render_plugin.rs  resource.rs  screen_space.rs  sky.rs  tone_mapping.rs  view_phase.rs  world.rs
crates/lumi-renderer/src/post_process/: bloom.rs  mod.rs
crates/lumi-renderer/src/prepare/: camera.rs  environment.rs  light.rs  lights.rs  mesh.rs  meshes.rs  mod.rs  shadow.rs  transform.rs
crates/lumi-shader/: Cargo.toml
crates/lumi-shader/src/: defines.rs  lib.rs  processor.rs
crates/lumi-task/: Cargo.toml
crates/lumi-task/src/: task_pool.rs
crates/lumi-util/: Cargo.toml
crates/lumi-util/src/: lib.rs
crates/lumi-world/: Cargo.toml
crates/lumi-world/src/: camera.rs  environment.rs  extract.rs  lib.rs  light.rs  node.rs  renderable.rs  world.rs
examples/: bake_to_disk.rs  custom_material.rs  gltf.rs  scene.rs  shiv.rs  sphere.rs  spheres.rs  unlit.rs
examples/assets/: custom.wgsl  susanne.glb  suzanne.glb  translucent.glb
examples/util/: camera.rs  framework.rs  material.rs  mod.rs
lumi-bake/: Cargo.toml
lumi-bake/src/: environment.rs  environment.wgsl  instance.rs
lumi-macro/: Cargo.toml
lumi-macro/src/: bind.rs  lib.rs  phase_label.rs
shaders/wgsl/: bloom_frag.wgsl  camera.wgsl  default_frag.wgsl  default_shadow_vert.wgsl  default_sky.wgsl  environment.wgsl  fxaa_frag.wgsl  gaussian.wgsl  integrated_brdf.wgsl  light.wgsl  mesh.wgsl  pbr.wgsl  pbr_light.wgsl  pbr_material.wgsl  pbr_pixel.wgsl  pbr_types.wgsl  poisson.wgsl  shadow.wgsl  shadow_mesh.wgsl  sky.wgsl  sky_vert.wgsl  ssr.wgsl  standard_frag.wgsl  standard_material.wgsl  unlit.wgsl
src/: aabb.rs  bind.rs  bind_group.rs  bind_key.rs  binding.rs  bloom.rs  buffer.rs  camera.rs  device.rs  environment.rs  environment.wgsl  frame_buffer.rs  fxaa.rs  gltf.rs  id.rs  integrated_brdf  key_map.rs  lib.rs  light.rs  material.rs  queue.rs  render_pipeline.rs  renderable.rs  renderer.rs  resources.rs  sampler.rs  shader.rs  shader_processor.rs  shadow.rs  shiv_plugin.rs  storage_buffer.rs  texture.rs  tone_mapping.rs  unlit.rs  world.rs
src/buffer/: mod.rs  storage.rs  uniform.rs
src/id/: map.rs  mod.rs
src/image/: emissive.rs  mod.rs  normal.rs  owned.rs  shared.rs
src/material/: mod.rs  standard.rs
src/mesh/: attribute.rs  buffers.rs  mod.rs  prepare.rs  shape.rs
src/pbr/: material.rs
src/renderer/: mod.rs  phase.rs  view_phase.rs
src/shader/: defines.rs  io.rs  mod.rs  processor.rs
src/shader/wgsl/: camera.wgsl  default_env_frag.wgsl  default_frag.wgsl  default_sky.wgsl  default_vert.wgsl  environment.wgsl  fullscreen.wgsl  fullscreen_vert.wgsl  light.wgsl  pbr.wgsl  pbr_light.wgsl  standard_frag.wgsl
src/wgsl/: bloom_frag.wgsl  default_frag.wgsl  mesh.wgsl  pbr.wgsl  pbr_material.wgsl  tonemapping.wgsl  tonemapping_frag.wgsl
src/world/: mod.rs  node.rs  transform.rs
