[package]
name = "lumi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dev-dependencies]
shiv-transform = { git = "https://github.com/ChangeCaps/shiv" }

[dependencies]
lumi-bake = { path = "crates/lumi-bake", version = "0.1.0" }
lumi-bind = { path = "crates/lumi-bind", version = "0.1.0" }
lumi-core = { path = "crates/lumi-core", version = "0.1.0", features = ["image"] }
lumi-gltf = { path = "crates/lumi-gltf", version = "0.1.0", optional = true }
lumi-id = { path = "crates/lumi-id", version = "0.1.0" }
lumi-macro = { path = "crates/lumi-macro", version = "0.1.0" }
lumi-material = { path = "crates/lumi-material", version = "0.1.0", optional = true }
lumi-mesh = { path = "crates/lumi-mesh", version = "0.1.0" }
lumi-renderer = { path = "crates/lumi-renderer", version = "0.1.0" }
lumi-shader = { path = "crates/lumi-shader", version = "0.1.0" }
lumi-util = { path = "crates/lumi-util", version = "0.1.0" }

shiv = { git = "https://github.com/ChangeCaps/shiv", optional = true }
shiv-app = { git = "https://github.com/ChangeCaps/shiv", optional = true }
shiv-wgpu = { git = "https://github.com/ChangeCaps/shiv", optional = true }
shiv-window = { git = "https://github.com/ChangeCaps/shiv", optional = true }
tracing-log = "0.1"

[features]
default = ["material", "gltf", "shiv-plugin"]
shiv-plugin = ["shiv", "shiv-app", "shiv-wgpu", "shiv-window"]
material = ["lumi-material"]
gltf = ["lumi-gltf"]
