[package]
name = "lumi-bake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.8"
futures-lite = "1.12"
image = { version = "0.24", optional = true }
log = "0.4"
thiserror = "1.0"
wgpu = "0.13"

[features]
default = ["image"]
image = ["dep:image"]
