[package]
name = "lumi-bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lumi-core = { path = "../lumi-core", version = "0.1.0" }
lumi-macro = { path = "../lumi-macro", version = "0.1.0" }
lumi-shader = { path = "../lumi-shader", version = "0.1.0" }
lumi-util = { path = "../lumi-util", version = "0.1.0" }
