[package]
name = "lumi-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lumi-assets = { path = "../lumi-assets", version = "0.1.0", optional = true }
lumi-id = { path = "../lumi-id", version = "0.1.0" }
lumi-util = { path = "../lumi-util", version = "0.1.0" }

encase = { version = "0.3", features = ["glam", "smallvec"] }
image = { version = "0.24", optional = true }
wgpu = "0.14"

[features]
default = ["assets", "image"]
assets = ["dep:lumi-assets"]
image = ["dep:image"]
