[package]
name = "lumi-gltf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lumi-material = { path = "../lumi-material", version = "0.1.0" }

gltf = { version = "1.0", features = ["KHR_materials_transmission"] }
