[package]
name = "lumi-gltf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lumi-assets = { path = "../lumi-assets", version = "0.1.0" }
lumi-core = { path = "../lumi-core", version = "0.1.0" }
lumi-material = { path = "../lumi-material", version = "0.1.0" }
lumi-mesh = { path = "../lumi-mesh", version = "0.1.0" }
lumi-renderer = { path = "../lumi-renderer", version = "0.1.0" }
lumi-util = { path = "../lumi-util", version = "0.1.0" }

gltf = { version = "1.0", features = ["KHR_materials_transmission"] }
