[package]
name = "lumi-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
lumi-bake = { path = "../lumi-bake", version = "0.1.0" }

proc-macro2 = "1.0"
proc-macro-crate = "1.1"
encase_derive_impl = "0.3"
syn = "1.0"
quote = "1.0"
