[package]
name = "lumi-shader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lumi-assets = { path = "../lumi-assets", version = "0.1.0" }
lumi-util = { path = "../lumi-util", version = "0.1.0" }
lumi-core = { path = "../lumi-core", version = "0.1.0" }

naga = { version = "0.10", features = ["glsl-in", "wgsl-out"] }
